--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ body a{
 	/*background: -ms-linear-gradient(top,  #f9fc63 7%,#d6f979 23%,#a9f794 43%,#59f0c7 60%,#18ecef 100%,#7db9e8 100%,#04e9fc 100%,#3cedd9 100%); /* IE10+ */
 	/*background: linear-gradient(to bottom,  #f9fc63 7%,#d6f979 23%,#a9f794 43%,#59f0c7 60%,#18ecef 100%,#7db9e8 100%,#04e9fc 100%,#3cedd9 100%); /* W3C */
 	/* filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f9fc63', endColorstr='#3cedd9',GradientType=0 ); IE6-9 8 */
-  background-image: url("images/LandscapeBannerNavi.png");
+  background-image: url("../images/LandscapeBannerNavi.png");
   background-size: cover;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
