--- a/css/style.css
+++ b/css/style.css
@@ -55,8 +55,8 @@ body a{
   /*background-size: 100%;*/
   /*background-position-y: 50%;*/
   /*background-repeat: no-repeat;*/
-	/*min-height:720px;*/
-	/*text-align:center;*/
+	min-height:720px;
+	text-align:center;
 }
 .scroll {
   margin:6em 0 0;
