--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-B/*Author: W3layouts
+/*Author: W3layouts
 Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
@@ -17,7 +17,7 @@ html,body{
     position:absolute;
     left:0;
     right:0;
-    width:100%;
+    width:auto;
 }
 
 body a{
